Add go http response writer header setting

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -46,3 +46,10 @@
 .custom-black {
     margin-bottom: 60px;
 }
+
+.just-for-fun {
+    font-size: 13px;
+    color: #B39CD0;
+    border-top: 1px solid #4B4453;
+    padding-top: 10px;
+}
